# smolagents-template

./: .gitignore  AGENT_WORKFLOW_GUIDE.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/plans/: backend-implementation.md
backend/: agents.py  api.py  main.py  memory.py  tools.py
backend/tests/: test_api_chat.py
frontend/: package.json
frontend/app/: assistant.tsx
frontend/app/api/chat/: route.ts
frontend/components/assistant-ui/: enhanced-text.tsx  streaming-final-answer.tsx  thread.tsx  tool-call-display.tsx  tool-fallback.tsx
frontend/lib/: tool-display-names.ts
